penambahan bahasa lain di aplikasi